--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Learning JavaScript!</title>
+  <title>JavaScript Fundamentals - The Odin Project </title>
   <script src="javascript.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -35,4 +35,5 @@
                 </div>    
     
 </body>
+
 </html>
